2009-10-26  Robert Millan  <rmh.grub@aybabtu.com>

	* gendistlist.sh: Simplify .svn check.  Skip .bzr as well.

2009-10-26  Robert Millan  <rmh.grub@aybabtu.com>

	* Makefile.in (RMKFILES): Rewrite using $(wildcard).

2009-10-26  Robert Millan  <rmh.grub@aybabtu.com>

	* disk/scsi.c: Remove `<grub/machine/kernel.h>' (not needed).

2009-10-26  Robert Millan  <rmh.grub@aybabtu.com>

	* gensymlist.sh.in (COMPILE_TIME_ASSERT): Copy macro declaration
	from here ...
	* include/grub/misc.h (COMPILE_TIME_ASSERT): ... to here.

2009-10-26  Robert Millan  <rmh.grub@aybabtu.com>

	* Makefile.in (docs/grub.info): Use make syntax to ignore errors
	in $(MAKEINFO) invocation.  This makes it clear in output that
	errors are being ignored.

2009-10-26  Robert Millan  <rmh.grub@aybabtu.com>

	* conf/i386-coreboot.rmk (script/sh/lexer.c_DEPENDENCIES): Moved
	from here ...
	* conf/common.rmk (script/sh/lexer.c_DEPENDENCIES): ... to here.
	* conf/i386-efi.rmk (script/sh/lexer.c_DEPENDENCIES): Remove.
	* conf/i386-ieee1275.rmk: Likewise.
	* conf/i386-pc.rmk: Likewise.
	* conf/powerpc-ieee1275.rmk: Likewise.
	* conf/sparc64-ieee1275.rmk: Likewise.
	* conf/x86_64-efi.rmk: Likewise.

2009-10-26  Colin Watson  <cjwatson@ubuntu.com>

	* util/grub-editenv.c (main): If only a command is given, use
	DEFAULT_DIRECTORY "/" GRUB_ENVBLK_DEFCFG as a default file name.
	(usage): FILENAME is now optional and has a default.

2009-10-26  Colin Watson  <cjwatson@ubuntu.com>

	Improve grub-mkconfig performance when there are several menu
	entries on a single filesystem.

	* util/grub.d/10_linux.in (linux_entry): Cache the output of
	prepare_grub_to_access_device.
	* util/grub.d/10_kfreebsd.in (kfreebsd_entry): Likewise.
	* util/grub.d/30_os-prober.in: Likewise.

2009-10-26  Robert Millan  <rmh.grub@aybabtu.com>

	* util/grub.d/10_freebsd.in: Remove.
	* util/grub.d/10_kfreebsd.in: New file (based on 10_linux.in).
	* configure.ac: Set host_kernel=kfreebsd for FreeBSD and GNU/kFreeBSD.
