@@ -5,8 +5,10 @@ set -e
 autoconf
 autoheader
 echo timestamp > stamp-h.in
-for rmk in conf/*.rmk; do
-  ruby genmk.rb < $rmk > `echo $rmk | sed 's/\.rmk$/.mk/'`
+for rmk in conf/*.rmk ${GRUB_CONTRIB}/*/conf/*.rmk; do
+  if test -e $rmk ; then
+    ruby genmk.rb < $rmk > `echo $rmk | sed 's/\.rmk$/.mk/'`
+  fi
 done
 ./gendistlist.sh > DISTLIST
 
